# stochastic-receding-horizon-control

./: Output  PDEsolver  ProjectHome.md  README  README~  VisualizeOutput.m  computeProbability.cpp  main.cpp  main.cpp~  mt19937ar.h
StochasticController/: stoc_controller.cpp
trunk/: README  computeProbability.cpp~
trunk/StochasticController/: CMakeLists.txt  socdemo.cpp  stoc_controller.h
